Fix menu flickering on reload and broken layout w/o JS
fixes #3629
fixes #3630

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -43,7 +43,6 @@
   width: 16em;
   position: fixed;
   left: 0;
-  margin-top: -3em;
 }
 
 #header-logo {
@@ -177,9 +176,7 @@
 // Display tabs if JS is disabled
 html.no-js .controls > .tabs {
   background-color: @icinga-blue;
-  margin-left: -1 * @gutter;
-  margin-right: -1 * @gutter;
-  margin-top: -1 * @gutter;
+  margin-top: 0;
 }
 
 // Dashboard grid
